--- a/DependencyInjectionContainerLibrary/DependencyInjectionContainerLibraryUTests/DependencyInjectionContainerLibraryUTests.csproj
+++ b/DependencyInjectionContainerLibrary/DependencyInjectionContainerLibraryUTests/DependencyInjectionContainerLibraryUTests.csproj
@@ -54,10 +54,18 @@
   <ItemGroup>
     <Compile Include="LibraryUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestClasses\A.cs" />
     <Compile Include="TestClasses\AbstractBar.cs" />
     <Compile Include="TestClasses\AbstractFoo.cs" />
+    <Compile Include="TestClasses\AInterface.cs" />
+    <Compile Include="TestClasses\B.cs" />
     <Compile Include="TestClasses\BarFromAbstract.cs" />
     <Compile Include="TestClasses\BarFromInterface.cs" />
+    <Compile Include="TestClasses\BInterface.cs" />
+    <Compile Include="TestClasses\C.cs" />
+    <Compile Include="TestClasses\CInterface.cs" />
+    <Compile Include="TestClasses\D.cs" />
+    <Compile Include="TestClasses\DInterface.cs" />
     <Compile Include="TestClasses\FooFromInterface.cs" />
     <Compile Include="TestClasses\GenericFoo.cs" />
     <Compile Include="TestClasses\IBar.cs" />
